examples/test/testpolicy11735.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11735
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key26: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value48
          key5: value28
      podSelector:
        matchLabels:
          key17: value6
          key22: value12
          key32: value25
